[package]
name = "Structures"
version = "0.1.0"
authors = ["Rusty Lock Free"]
categories = []
edition = "2024"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Lock Free Data Structures in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
